--- a/src/scss/media.scss
+++ b/src/scss/media.scss
@@ -9,6 +9,7 @@
 @media (min-width: 576px) {
     .header {
         min-height: 95px;
+        
     }
 
     body .container {
@@ -16,6 +17,8 @@
     }
 
     .navbar {
+        padding-top: 33px;
+        padding-bottom: 33px;
         .navbar-brand {
             width: 146px;
             height: 55px;
@@ -135,10 +138,12 @@
 
         &__group .member-wraper {
             padding: 32px 64px 56px 64px;
+            position: relative;
         }
 
         &__intro-box {
             margin-bottom: 40px;
+            margin-right: -24px;
         }
 
         .intro-meet {
@@ -146,15 +151,34 @@
             font-size: 14px;
             line-height: 18px;
             max-width: 510px;
+ 
         }
+
+        .service-arrow {
+            display: flex;
+            align-items: center;
+            margin-left: 24px;
+
+            .line {
+                width: 33px;
+                height: 2px;
+                background: $yellow;
+            }
+
+            .arrow {
+                margin-left: 5px;
+            }
+        }
+   
+        
 
         .member-img {
             height: 190px;
         }
 
         .member-img img {
-            height: 190px;
-            width: 190px;
+            height: 228px;
+            width: auto;
         }
 
         .member-name {
@@ -180,7 +204,7 @@
         }
 
         ul {
-            margin-bottom: 40px;
+            margin-bottom: 0;
         }
 
         ul>li {
@@ -192,19 +216,29 @@
             }
         }
 
-        .member-links a {
-            margin-left: 16px;
+        .member-links {
+            position: absolute;
+            bottom: 40px;
+            right: 40px;
+            & a {
+                margin-left: 16px;
+            }
         }
     }
 
     //NEWS
     .news {
         .container{
-            max-width: 500px;
+            max-width: 540px;
         }
 
+        .news__title-box {
+            padding-left: 30px;
+        }
         .swiper {
-            padding-left: 15px;
+            padding-left: 45px;
+            padding-right: 0;
+            padding-bottom: 100px;
             
         }
         .swiper-slide {
@@ -258,14 +292,15 @@
     body h2 {
         font-size: 90px;
         line-height: 100px;
+        padding: 96px 0 0 0;
     }
 
     body ul {
         margin-bottom: 0;
     }
 
-    .container {
-        max-width: 690px !important;
+    body .container {
+        max-width: 690px ;
 
     }
 
@@ -351,9 +386,9 @@
     }
 
     //HEADER NAVBAR
-
     .navbar {
-
+        padding-top: 40px;
+        padding-bottom: 40px;
         &-brand img {
             height: 55px;
             width: 146px;
@@ -376,6 +411,10 @@
         }
 
         .menu__btn {
+            display: none;
+        }
+
+        .navbar-contact-us {
             display: none;
         }
 
@@ -452,7 +491,7 @@
             font-size: 18px;
             line-height: 26px;
             margin: 0px 0px 10px 22px;
-            padding-right: 30px;
+        
 
             &::before {
                 content: "";
@@ -474,10 +513,26 @@
         }
     }
 
+
+    
+
     //NEWS 
+
+    body .news {
+        .container{
+            max-width: 720px;
+        }
+    }
     .news {
+
+        .swiper {
+            padding-left: 30px;
+            padding-right: 30px;
+        }
+
         .card {
             min-height: 513px;
+            max-width: 515px;
         }
 
         .card-logo { 
@@ -555,8 +610,9 @@
 
 @media (min-width: 992px) {
 
-    .container {
-        min-width: 940px;
+    body .container {
+        max-width: 930px;
+        width: 100%;
     }
 
     .navbar__links {
@@ -661,8 +717,14 @@
         }
     }
 
+    //NEWS
+    body .news .container {
+        max-width: 100%;
+        width: 970px;
+    }
     .news {
         .swiper{
+            padding-right: 29px;
             margin-bottom: 96px;
         }
         .card {
@@ -673,8 +735,6 @@
     
     //FOOTER
     .footer {
-        padding-top: 54px;
-        padding-bottom: 154px;
        
         .email-wrapper span {
             font-size: 30px;
@@ -685,15 +745,23 @@
 }
 
 
-
 @media (min-width: 1150px) {
 
-    .container {
-        max-width: 1110px !important;
+    .mission .text-box_text {
+        margin-left: -14px;
+    }
+}
+
+
+@media (min-width: 1200px) {
+
+    body .container {
+        max-width: 1110px;
         padding: 0;
     }
 
-    .text-box_text {
-        margin-left: -14px;
+    body .news .container {
+        max-width: 1170px;
+        width: 100%;
     }
 }
